# cg2017-1

./: .gitignore  README.md
trabalho1/: Relatório de Computação Gráfica.docx  trab1.c
trabalho1/exemplos/: A4Q1.c  A4Q2.cpp
trabalho2/: CMakeLists.txt  CircleEnemy.cpp  Enemy.cpp  Enemy.h  Makefile  Plane.cpp  Plane.h  Shoot.cpp  Shoot.h  SpaceInvader.cpp  SquareEnemy.cpp  SquareEnemy.h  TriangleEnemy.cpp  TriangleEnemy.h  enemy.cpp  enemy.h  shoot.cpp  shoot.h  spaceinvader
trabalho2/includes/: CircleEnemy.h  Enemy.h  Plane.h  Shoot.h  Shooter.h  SquareEnemy.h  TriangleEnemy.h
trabalho2/src/: CircleEnemy.cpp  Enemy.cpp  Plane.cpp  Shoot.cpp  SquareEnemy.cpp  TriangleEnemy.cpp
trabalho2/v2/: Makefile  TODO.md  trab2  trab2.cc
trabalho3/: Makefile  Relatorio.docx  bibutil.cpp  bibutil.h  trab3  trab3.cpp
trabalho4/: .~lock.Relatorio.docx#  Makefile  Relatorio.docx  renderingDeSuperficie_Ellipse.cpp  renderingEllipse  renderingEllipse.cpp
